# etl-bookstore-club

./: README.md  pyproject.toml  usecase_scrapper_book.py
src/entities/: bookstore.py  scrapper.py
