[tool.poetry]
name = "etl-bookstore"
version = "0.1.0"
description = ""
authors = ["Bruno Soares <tsoares.bruno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.12.0"
beautifulsoup4 = "^4.12.2"
pyspark = "^3.4.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
